{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 90,
  "lineage": "e8fb1a89-a87e-3437-da12-baf16cbf817d",
  "resources": [
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165742852730:vpc/vpc-0e51c69812b74f80b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0242612fe46604a6e",
            "default_route_table_id": "rtb-0c116077294d34296",
            "default_security_group_id": "sg-0eda94f657a9eccec",
            "dhcp_options_id": "dopt-02edae0feeba311c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0e51c69812b74f80b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c116077294d34296",
            "owner_id": "165742852730",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f559c3642608c138",
            "arn": "arn:aws:ec2:ap-south-1:165742852730:instance/i-0628615672d057247",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0628615672d057247",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a8d5ce4516248ec1"
              }
            ],
            "primary_network_interface_id": "eni-0a8d5ce4516248ec1",
            "private_dns": "ip-172-31-42-25.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.42.25",
            "public_dns": "ec2-13-201-7-123.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.7.123",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-013f4f54c6c95f21b",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dev-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cec15a162fb507aa",
            "tags": {
              "Environment": "dev",
              "Name": "dev-Infra-EC2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-Infra-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-015c30dec06a950e1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "165742852730",
            "id": "i-0628615672d057247",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default",
            "module.dev-infra.aws_key_pair.my_key",
            "module.dev-infra.aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f559c3642608c138",
            "arn": "arn:aws:ec2:ap-south-1:165742852730:instance/i-0ed70af56e8dc1c24",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ed70af56e8dc1c24",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06785eecc78b5bc2b"
              }
            ],
            "primary_network_interface_id": "eni-06785eecc78b5bc2b",
            "private_dns": "ip-172-31-35-195.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.35.195",
            "public_dns": "ec2-35-154-184-146.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.184.146",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f9b2f63303d78c7a",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dev-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cec15a162fb507aa",
            "tags": {
              "Environment": "dev",
              "Name": "dev-Infra-EC2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-Infra-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-015c30dec06a950e1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "165742852730",
            "id": "i-0ed70af56e8dc1c24",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default",
            "module.dev-infra.aws_key_pair.my_key",
            "module.dev-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165742852730:security-group/sg-015c30dec06a950e1",
            "description": "Sample Security Group for EC2 Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015c30dec06a950e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-infra-app-sg",
            "name_prefix": "",
            "owner_id": "165742852730",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e51c69812b74f80b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "165742852730",
            "id": "sg-015c30dec06a950e1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.prod-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165742852730:vpc/vpc-0e51c69812b74f80b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0242612fe46604a6e",
            "default_route_table_id": "rtb-0c116077294d34296",
            "default_security_group_id": "sg-0eda94f657a9eccec",
            "dhcp_options_id": "dopt-02edae0feeba311c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0e51c69812b74f80b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c116077294d34296",
            "owner_id": "165742852730",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.prod-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f559c3642608c138",
            "arn": "arn:aws:ec2:ap-south-1:165742852730:instance/i-0596aa2564630fdd3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0596aa2564630fdd3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-064eb4cf3cbe6203d"
              }
            ],
            "primary_network_interface_id": "eni-064eb4cf3cbe6203d",
            "private_dns": "ip-172-31-37-1.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.37.1",
            "public_dns": "ec2-13-233-162-22.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.162.22",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09542bb0fbb3d9a5b",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prod-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cec15a162fb507aa",
            "tags": {
              "Environment": "prod",
              "Name": "prod-Infra-EC2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-Infra-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08162d6c1c3f9d569"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "165742852730",
            "id": "i-0596aa2564630fdd3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.prod-infra.aws_default_vpc.default",
            "module.prod-infra.aws_key_pair.my_key",
            "module.prod-infra.aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f559c3642608c138",
            "arn": "arn:aws:ec2:ap-south-1:165742852730:instance/i-0b296ebb69bb68e6b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b296ebb69bb68e6b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0af888183722ba28e"
              }
            ],
            "primary_network_interface_id": "eni-0af888183722ba28e",
            "private_dns": "ip-172-31-34-108.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.34.108",
            "public_dns": "ec2-13-233-165-89.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.165.89",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f3f23be398eb6f27",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prod-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cec15a162fb507aa",
            "tags": {
              "Environment": "prod",
              "Name": "prod-Infra-EC2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-Infra-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08162d6c1c3f9d569"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "165742852730",
            "id": "i-0b296ebb69bb68e6b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.prod-infra.aws_default_vpc.default",
            "module.prod-infra.aws_key_pair.my_key",
            "module.prod-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.prod-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165742852730:security-group/sg-08162d6c1c3f9d569",
            "description": "Sample Security Group for EC2 Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08162d6c1c3f9d569",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-infra-app-sg",
            "name_prefix": "",
            "owner_id": "165742852730",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod"
            },
            "tags_all": {
              "Environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e51c69812b74f80b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "165742852730",
            "id": "sg-08162d6c1c3f9d569",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.prod-infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.stage-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165742852730:vpc/vpc-0e51c69812b74f80b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0242612fe46604a6e",
            "default_route_table_id": "rtb-0c116077294d34296",
            "default_security_group_id": "sg-0eda94f657a9eccec",
            "dhcp_options_id": "dopt-02edae0feeba311c6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0e51c69812b74f80b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c116077294d34296",
            "owner_id": "165742852730",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.stage-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f559c3642608c138",
            "arn": "arn:aws:ec2:ap-south-1:165742852730:instance/i-044d17019f883c241",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044d17019f883c241",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "stage-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e7b934d123cfe950"
              }
            ],
            "primary_network_interface_id": "eni-0e7b934d123cfe950",
            "private_dns": "ip-172-31-36-191.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.36.191",
            "public_dns": "ec2-13-201-126-132.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.126.132",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06cc24ee1c3eb7066",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "stage-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cec15a162fb507aa",
            "tags": {
              "Environment": "stage",
              "Name": "stage-Infra-EC2"
            },
            "tags_all": {
              "Environment": "stage",
              "Name": "stage-Infra-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0966f869d312a49a2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "165742852730",
            "id": "i-044d17019f883c241",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.stage-infra.aws_default_vpc.default",
            "module.stage-infra.aws_key_pair.my_key",
            "module.stage-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.stage-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:165742852730:security-group/sg-0966f869d312a49a2",
            "description": "Sample Security Group for EC2 Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0966f869d312a49a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stage-infra-app-sg",
            "name_prefix": "",
            "owner_id": "165742852730",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "stage"
            },
            "tags_all": {
              "Environment": "stage"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e51c69812b74f80b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "165742852730",
            "id": "sg-0966f869d312a49a2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.stage-infra.aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}